--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@minhtrn/strapi-plugin-github-projects": "^1.0.3",
     "@strapi/plugin-i18n": "4.11.3",
     "@strapi/plugin-users-permissions": "4.11.3",
     "@strapi/provider-upload-cloudinary": "^4.11.3",
