--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/provider-upload-cloudinary": "^4.11.3",
     "@strapi/strapi": "4.11.3",
     "pg": "8.8.0",
+    "strapi-google-auth": "^0.1.2",
     "strapi-plugin-vercel-deploy": "^1.4.0"
   },
   "author": {
