--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@strapi/provider-upload-cloudinary": "^4.11.3",
     "@strapi/strapi": "4.11.3",
     "pg": "8.8.0",
+    "strapi": "^3.6.11",
     "strapi-plugin-ezforms": "^0.1.5",
     "strapi-plugin-import-export-entries": "^1.21.0",
     "strapi-plugin-rest-cache": "^4.2.7",
